# Process this file with configure to produce a Makefile

# Test Environment
#
# agents/ Makefile
#
# Copyright (C) 2003-2018 OKTET Labs.
#
# Author Elena A. Vengerova <Elena.Vengerova@oktetlabs.ru>

SUBDIRS=. @TA_SUBDIRS@

DIST_SUBDIRS=@TA_DIST_SUBDIRS@

install-exec-local:
	mkdir -p $(DESTDIR)/$(prefix)/agents
