# Process this file with autoconf to produce a configure script.

# Test Environment
#
# doc configure
#
# Copyright (C) 2003 Test Environment authors (see file AUTHORS in the 
# root directory of the distribution).
#
# Test Environment is free software; you can redistribute it and/or 
# modify it under the terms of the GNU General Public License as 
# published by the Free Software Foundation; either version 2 of 
# the License, or (at your option) any later version.
# 
# Test Environment is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
# MA  02111-1307  USA
#
# Author Elena A. Vengerova <Elena.Vengerova@oktetlabs.ru>

AC_PREREQ([2.59])

AC_INIT([test_environment-doc], [0.8], [Elena.Vengerova@oktetlabs.ru])

AC_CONFIG_AUX_DIR([../aux])

AM_INIT_AUTOMAKE([foreign -Wall])

AC_CONFIG_FILES([\
Makefile \
guides/Makefile \
hld/Makefile \
xsd/Makefile \
cm/Makefile \
ndn/Makefile \
])

AC_OUTPUT
