# Process this file with autoconf to produce a configure script.

# Test Environment
#
# doc configure
#
# Copyright (C) 2003-2018 OKTET Labs.
#
# Author Elena A. Vengerova <Elena.Vengerova@oktetlabs.ru>

AC_PREREQ([2.59])

AC_INIT([test_environment-doc],[0.8],[Elena.Vengerova@oktetlabs.ru])

AC_CONFIG_AUX_DIR([../auxdir])
AC_CONFIG_MACRO_DIR([../auxdir])

AM_INIT_AUTOMAKE([1.8.5 foreign -Wall])
TE_SETUP_AR

AC_CONFIG_FILES([\
Makefile \
guides/Makefile \
hld/Makefile \
xsd/Makefile \
cm/Makefile \
ndn/Makefile \
])

AC_OUTPUT
